--- a/ImageCaptioningModel.ipynb
+++ b/ImageCaptioningModel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLyzk8kBMkLEhVhD89oyfk",
+      "authorship_tag": "ABX9TyNi+rhsXcJC+BocK9hfg/4G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,28 @@
       "source": [
         "import string\n",
         "\n",
-        "def load"
+        "def load_doc(filename):\n",
+        "  file= open(filename,'r')\n",
+        "  text=file.read()\n",
+        "  file.close()\n",
+        "  return text\n",
+        "\n",
+        "def load_descriptions(doc):\n",
+        "  mapping = dict()\n",
+        "  for line in doc.split('\\n'):\n",
+        "    tokens= line.split()\n",
+        "    if len(line)<2:\n",
+        "      continue\n",
+        "    image_id, image_desc= tokens[0], tokens[1:]\n",
+        "    image_id = image_id.split('.')[0]\n",
+        "    image_desc= ' '.join(image_desc)\n",
+        "\n",
+        "    if image_id not in mapping:\n",
+        "      mapping[image_id]= list()\n",
+        "\n",
+        "    mapping[image_id].append(image_desc)\n",
+        "  return mapping\n",
+        ""
       ],
       "metadata": {
         "id": "3SJFsf3uD9L9"
