Adding more functions

--- a/ImageCaptioningModel.ipynb
+++ b/ImageCaptioningModel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNi+rhsXcJC+BocK9hfg/4G",
+      "authorship_tag": "ABX9TyNtW0amd9pdZpeh3ITdrShj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,7 +98,24 @@
         "\n",
         "    mapping[image_id].append(image_desc)\n",
         "  return mapping\n",
-        ""
+        "\n",
+        "def clean_descriptions(descriptions):\n",
+        "  table = str.maketrans('','',string.punctuation)\n",
+        "  for key, desc_list in descriptions.items():\n",
+        "    for i in range(len(desc_list)):\n",
+        "      desc= desc.split()\n",
+        "      desc = [word.lower() for word in desc]\n",
+        "      desc = [w.translate(table) for w in desc]\n",
+        "      desc = [word for word in desc if len(word)>1]\n",
+        "      desc = [word for word in desc if word.isalpha()]\n",
+        "      desc_list[i]= ' '.join(desc)\n",
+        "\n",
+        "def to_vocabulary(descriptions):\n",
+        "  all_desc= set()\n",
+        "  for key in descriptions.keys():\n",
+        "    [all_desc.update(d.split()) for d in descriptions[key]]\n",
+        "  return all_desc\n",
+        "  #we split on the basis of white spaces, and those words are added to set called all_desc\n"
       ],
       "metadata": {
         "id": "3SJFsf3uD9L9"
